# inference-gstreamer

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
dockerfiles/: deepstream-5.0-20.07-devel.Dockerfile
src/: gst_dashcam_model.py  gst_primary_detector.py  gst_read_rtsp.py  gst_trafficcam_model.py  gstreamer_read_rtsp.py  stream_video.sh
src/c/: Makefile  argparser.c  argparser.h  functions.c  functions.h  gst_read_rtsp.c
src/common/: gstreamer_wrappers.py
src/configs/: pgie_dashcamnet.txt  pgie_dashcamnet_no_person.txt  pgie_peoplenet.txt  pgie_primary_detector.txt  pgie_trafficcamnet.txt  tracker_config.yml
src/models/DashCamNet/: resnet18_dashcamnet_pruned.etlt
src/models/PeopleNet/: resnet34_peoplenet_pruned.etlt
src/models/Primary_Detector/: resnet10.caffemodel
src/models/TrafficCamNet/: resnet18_trafficcamnet_pruned.etlt
src/python/: gst_dashcam_model.py  gst_multiple_rtsp_inference.py  gst_primary_detector.py  gst_read_multiple_rtsp.py  gst_read_rtsp.py  gst_trafficcam_model.py  gstreamer_multiple_rtsp_inference.py  gstreamer_rtsp_inference10.py  gstreamer_rtsp_inference11.py  gstreamer_rtsp_inference12.py  gstreamer_rtsp_inference2.py  gstreamer_rtsp_inference3.py  gstreamer_rtsp_inference6.py  gstreamer_rtsp_inference7.py  gstreamer_rtsp_inference8.py  gstreamer_rtsp_inference9.py  multifilesrc_example.py
src/python/common/: gstreamer_wrappers.py  nvutils.py  utils.py
